# opyni

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/opyni/: __main__.py  cli.py  configuration.py  exception.py  generator.py
tests/: test_cli.py
